# rust-logger

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: colors.rs  lib.rs  log.rs  log_type.rs  severity.rs
